--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.0",
     "@testing-library/user-event": "^12.2.2",
-    "firebase": "^8.0.2",
+    "axios": "^0.21.0",
+    "firebase": "^8.1.2",
     "react": "^17.0.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
